tweaks visualization option buttons & fixes tooltip overlap

--- a/packages/cms/src/components/Viz/Options.css
+++ b/packages/cms/src/components/Viz/Options.css
@@ -3,9 +3,7 @@
 .Options {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 5px;
   & .option {
-    margin-bottom: 5px;
     /* keep tooltips above button (blueprint override) */
     &.bp3-button,
     &.bp3-button:focus {
